# future-composer-audio-decoding

./: README.md  index.html
audacious-plugin-fc/: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  audacious-plugin-fc.metainfo.xml  audacious-plugin-fc.spec  audacious-plugin-fc.spec.in  bmp-fc.spec.in  configure  configure.ac  configure.in
audacious-plugin-fc/src/: Config.h.in  Main.cpp  Makefile.am  Makefile.in  about.c  audfc.cpp  audfc.h  config.h.in  configure.c  configure.cpp  configure.h  main.c  plugin.c
bmp-fc/: ChangeLog  Makefile.in  README  acinclude.m4  bmp-fc.spec  configure  configure.in
bmp-fc/src/: FC.README  Main.cpp  Makefile.am  Makefile.in  MyTypes.h  about.h
gstreamer-plugin-fc/: ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.in  gstfcdec.c  gstfcdec.h
gstreamer-plugin-fc/gst1/: Makefile.am  gst1fcdec.c
gstreamer-plugin-fc/src/: FC.cpp  Makefile.am  Makefile.in  gstfcdec.cpp  gstfcdec.h
libfc14audiodecoder/: README
xmms-fc/: ChangeLog  Makefile.am  Makefile.in  README  acconfig.h  acinclude.m4  aclocal.m4  configure  configure.in  xmms-fc.spec  xmms-fc.spec.in
xmms-fc/src/: Config.h.in  FC.README  FC.cpp  LamePaula.h  Main.cpp  Makefile.am  Makefile.in  SmartPtr.h  about.c  configure.c  configure.h  main.c
