AC_INIT
AC_CONFIG_SRCDIR([src/plugin.c])
AM_INIT_AUTOMAKE(audacious-plugin-fc, 0.7)
AM_DISABLE_STATIC
AM_PROG_LIBTOOL
AC_CONFIG_HEADERS([src/config.h])
AC_CONFIG_MACRO_DIR([m4])

dnl AC_CANONICAL_HOST

AC_PROG_CC
AC_LANG([C])
AC_C_BIGENDIAN
AC_PATH_PROG(RM,rm,rm)

dnl AC_HEADER_STDC

AC_CHECK_HEADER(fc14audiodecoder.h,
    [],[AC_MSG_ERROR([fc14audiodecoder.h not found])])
AC_CHECK_LIB(fc14audiodecoder,fc14dec_new)
if ! test "$ac_cv_lib_fc14audiodecoder_fc14dec_new" = yes; then
    AC_MSG_ERROR([libfc14audiodecoder not found])
fi

PKG_CHECK_MODULES(audacious, audacious >= 3.0)

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
