AC_INIT
AC_CONFIG_SRCDIR([src/plugin.c])
AM_INIT_AUTOMAKE(audacious-plugin-fc, 0.7)
AM_DISABLE_STATIC
AM_PROG_LIBTOOL
AC_CONFIG_HEADERS([src/config.h])
AC_CONFIG_MACRO_DIR([m4])

dnl AC_CANONICAL_HOST

AC_PROG_CC
AC_LANG([C])
AC_C_BIGENDIAN
AC_PATH_PROG(RM,rm,rm)

dnl AC_HEADER_STDC

AC_CHECK_HEADER(fc14audiodecoder.h,
    [],[AC_MSG_ERROR([fc14audiodecoder.h not found])])
AC_CHECK_LIB(fc14audiodecoder,fc14dec_new)
if ! test "$ac_cv_lib_fc14audiodecoder_fc14dec_new" = yes; then
    AC_MSG_ERROR([libfc14audiodecoder not found])
fi

PKG_CHECK_EXISTS([Audacious 3.2], [audacious >= 3.2],
    AC_MSG_ERROR([Could not find Audacious 3.2 API pkgconfig file.]))

PKG_CHECK_MODULES([GTK], [gtk+-3.0 >= 3.0.0], [], AC_MSG_ERROR([Could not find GTK+ >= 3.]))
AC_SUBST([GTK_CFLAGS])
AC_SUBST([GTK_LIBS])

PKG_CHECK_MODULES([GLIB], [glib-2.0], [], AC_MSG_ERROR([Could not find GLib 2.]))
AC_SUBST([GLIB_CFLAGS])
AC_SUBST([GLIB_LIBS])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
