AC_INIT(src/FC.cpp)
AM_INIT_AUTOMAKE(gstreamer-plugin-fc, 0.1)
AM_CONFIG_HEADER(src/Config.h)

AC_CANONICAL_HOST
dnl AC_PREFIX_DEFAULT(/usr)
AC_EXEEXT()

AC_PROG_CC
AC_LANG_C

AC_C_BIGENDIAN
dnl echo $ac_cv_c_bigendian
dnl if ! test "$ac_cv_c_bigendian" = yes; then
dnl  AC_DEFINE(WORDS_LITTLEENDIAN)
dnl fi

AC_CHECK_SIZEOF(char)
AC_CHECK_SIZEOF(short int)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long int)

AC_HEADER_STDC

dnl versions of gstreamer and plugins-base
GST_MAJORMINOR=0.10
GST_REQUIRED=0.10.0
GSTPB_REQUIRED=0.10.0

PKG_CHECK_MODULES(GST, \
  gstreamer-$GST_MAJORMINOR >= $GST_REQUIRED,
  HAVE_GST=yes,HAVE_GST=no)

if test "x$GST_LIBS" != "x"; then
    CFLAGS="$CFLAGS $GST_CFLAGS"
    CXXFLAGS="$CXXFLAGS $GST_CFLAGS"
    LIBS="$LIBS $GST_LIBS"
    AC_MSG_RESULT(yes)
else
    AC_MSG_RESULT(no)
fi


AC_PATH_PROG(CAT,cat,no)
if test "$CAT" = no; then
    AC_MSG_ERROR(["cat" not found!]);
fi

AC_PATH_PROG(CP,cp,no)
if test "$CP" = no; then
    AC_MSG_ERROR(["cp" not found!]);
fi

AC_PATH_PROG(RM,rm,rm)

AC_PROG_CXX
AC_LANG_CPLUSPLUS

AM_DISABLE_STATIC
AM_PROG_LIBTOOL

FC_CHECK_BOOL
FC_CHECK_IOS_BINARY
FC_CHECK_NOTHROW

AC_CHECK_HEADERS(cstring string.h fstream fstream.h)
fc_new_cpp_headers="yes"
if test "$ac_cv_header_cstring" = no ||
   test "$ac_cv_header_fstream" = no; then
	AC_DEFINE([FC_HAVE_OLD_CPP_HEADERS], 1, 
        [Define only if old non-standard C++ headers are available.])
    fc_new_cpp_headers="no"
fi
if test "$fc_new_cpp_headers" = no; then
    if test "$ac_cv_header_cstring" = no ||
       test "$ac_cv_header_fstream" = no; then
        AC_MSG_ERROR(
[Standard C++ library include files not found!]
        );
    fi
fi

AC_SUBST(CXXFLAGS)

dnl set the location where plugins should be installed
if test "x${prefix}" = "x$HOME"; then
  GST_PLUGIN_DIR="$HOME/.gstreamer-$GST_MAJORMINOR/plugins"
else
  GST_PLUGIN_DIR="\$(libdir)/gstreamer-$GST_MAJORMINOR"
fi
AC_SUBST(GST_PLUGIN_DIR)

dnl set proper LDFLAGS for plugins
GST_PLUGIN_LDFLAGS='-module -avoid-version -export-symbols-regex [_]*\(gst_\|Gst\|GST_\).*'
AC_SUBST(GST_PLUGIN_LDFLAGS)

dnl make GST_MAJORMINOR available in Makefile.am
AC_SUBST(GST_MAJORMINOR)

AC_OUTPUT(Makefile src/Makefile)
