dnl Run `aclocal' to create macro file (if missing).
dnl Run `automake -a -c' to copy macro files (if missing).
dnl Run `autoconf' to create `configure' script.

AC_INIT(src/FC.cpp)
AM_INIT_AUTOMAKE(xmms-fc, 0.5.3)
AM_CONFIG_HEADER(src/Config.h)

AC_CANONICAL_HOST
AC_PREFIX_DEFAULT(/usr)
AC_EXEEXT()

AC_PROG_CC
AC_LANG_C

AC_C_BIGENDIAN
dnl echo $ac_cv_c_bigendian
dnl if ! test "$ac_cv_c_bigendian" = yes; then
dnl  AC_DEFINE(WORDS_LITTLEENDIAN)
dnl fi

AC_CHECK_SIZEOF(char)
AC_CHECK_SIZEOF(short int)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long int)

AC_HEADER_STDC

dnl Check for GTK+
AM_PATH_GTK(1.2.0,,
  AC_MSG_ERROR(Test for GTK failed.), gthread)

AC_PATH_PROG(CAT,cat,no)
if test "$CAT" = no; then
    AC_MSG_ERROR(["cat" not found!]);
fi

AC_PATH_PROG(CP,cp,no)
if test "$CP" = no; then
    AC_MSG_ERROR(["cp" not found!]);
fi

AC_PATH_PROG(RM,rm,rm)

AC_PATH_PROG(SED,sed,no)
if test "$SED" = no; then
    AC_MSG_ERROR(["sed" not found!]);
fi

AC_PATH_PROG(XMMSCFG, xmms-config, "no")
if test "$XMMSCFG" = no; then
    AC_MSG_ERROR([xmms-config not found!]);
fi

AC_PROG_CXX
AC_LANG_CPLUSPLUS

AM_DISABLE_STATIC
dnl Initialize libtool.
AM_PROG_LIBTOOL
dnl FC_PROG_LIBTOOL
dnl Hack to let C-specific libtool use C++ compiler for collecting
dnl inter-library dependencies. Beware!
$CP libtool libtool.orig
$CAT libtool.orig | ${SED} s/^CC=.*/CC=\"${CXX}\"/ > libtool

FC_CHECK_BOOL
FC_CHECK_IOS_BINARY
FC_CHECK_NOTHROW

AC_CHECK_HEADERS(cstring string.h fstream fstream.h)
fc_new_cpp_headers="yes"
if test "$ac_cv_header_cstring" = no ||
   test "$ac_cv_header_fstream" = no; then
    AC_DEFINE(FC_HAVE_OLD_CPP_HEADERS)
    fc_new_cpp_headers="no"
fi
if test "$fc_new_cpp_headers" = no; then
    if test "$ac_cv_header_cstring" = no ||
       test "$ac_cv_header_fstream" = no; then
        AC_MSG_ERROR(
[Standard C++ library include files not found!]
        );
    fi
fi

AC_SUBST(CXXFLAGS)

AC_OUTPUT(Makefile src/Makefile xmms-fc.spec)
