AC_INIT
AC_CONFIG_SRCDIR([src/main.c])
AM_INIT_AUTOMAKE(xmms-fc, 0.6)
AM_DISABLE_STATIC
AM_PROG_LIBTOOL
AM_CONFIG_HEADER([src/config.h])
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AC_LANG([C])
AC_C_BIGENDIAN
AC_PATH_PROG(RM,rm,rm)

AC_CHECK_HEADER(fc14audiodecoder.h,
    [],[AC_MSG_ERROR([fc14audiodecoder.h not found])])
AC_CHECK_LIB(fc14audiodecoder,fc14dec_new)
if ! test "$ac_cv_lib_fc14audiodecoder_fc14dec_new" = yes; then
    AC_MSG_ERROR([libfc14audiodecoder not found])
fi

AC_PATH_PROG(XMMSCFG, xmms-config, "no")
if test "$XMMSCFG" = no; then
    AC_MSG_ERROR([xmms-config not found!]);
fi

dnl Check for GTK+
AM_PATH_GTK(1.2.0,,
  AC_MSG_ERROR(Test for GTK failed.), gthread)

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
